--- a/contract/template_creativity.tex
+++ b/contract/template_creativity.tex
@@ -9,14 +9,20 @@
 \usepackage{datetime}
 \usepackage{enumitem}
 
-\newcommand{\grant}{GRANT }
-\newcommand{\project}{PROJECT }
-\newcommand{\artist}{ARTIST }
-\newcommand{\amount}{AMOUNT }
-\newcommand{\fac}{Firefly Arts Collective }
+\newcommand{\fac}{Firefly Arts Collective}
+% Project-specific parameters.
+\newcommand{\grant}{GRANT}
+\newcommand{\project}{PROJECT}
+\newcommand{\artist}{ARTIST}
+\newcommand{\amount}{AMOUNT}
+% Import project-specific parameter overrides, if any.
+\IfFileExists{parameters.tex}{\input{parameters.tex}}{}
+% Update these dates for the new year
+\newcommand{\instday}{Friday}
+\newcommand{\instdate}{2016 July 1}
 
 \begin{document}
-\chead[Firefly \grant{} 2015]{\project{}}
+\chead[Firefly \grant{} \the\year{}]{\project{}}
 
 \centerline{\Large \bf \grant{} Contract}
 \medskip
@@ -28,8 +34,8 @@
 \section*{Overview}
 This artist agreement is between the artist and \fac{} regarding the submitted proposal for \project{}.
 
-The artist, \artist{}, desires to receive grant funding to bring \project{} to the Firefly Arts Festival in July \the\year;
-\fac{} has agreed to provide funding in the amount of \amount{}\ USD for the project as presented in the proposal.  The
+The artist, \artist{}, desires to receive grant funding to bring \project{} to the Firefly Arts Festival in July \the\year{};
+\fac{} has agreed to provide funding in the amount of \amount{}\ USD for the project as determined by the Art Grant Core.  The
 artist shall not make any changes to the size, shape, and/or design of the proposed project without obtaining approval
 from a representative of \fac{}'s Art Core.
 
@@ -46,30 +52,26 @@ All parties agree to the terms presented below.  Violation of any of the followi
 \item The project \project{} will be completed as described in the proposal.  The project will be deemed approved upon
   completion of the artist's and \fac{}'s signatures on this contract.
 
-\item \fac{} will retain 50\% of the grant funding as a performance deposit.  The first payment (50\% of the total alotted
+\item \fac{} will retain 75\% of the grant funding as a performance deposit.  The first payment (25\% of the total alotted
   funding) will be disbursed upon receiving the signed contract; the second payment will be disbursed upon completion of
   all requirements outlined in this document.
 
-\item The artist agrees that this grant of \amount{}\ USD shall represent the total sum s/he will receive from \fac{} and the artist hereby
+\item The artist agrees that this grant of \amount{}\ USD shall represent the total sum they will receive from \fac{} and the artist hereby
   agrees to assume responsibility for any additional costs beyond the the grant amount incurred in the production of
-  \project{} for Firefly Arts Festival \the\year.
+  \project{} for Firefly Arts Festival \the\year{}.
 
 \section*{Events}
 \item The artist agrees to meet the following schedule of events, under the given schedule:
 
   \begin{description}
-    \item[Firefly Open Studios (2015 May 2-3)] The artist will attend Somerville Open Studios and present their project
-      as a showcased artist.
-    \item[Project Installation (2015 July 2)] The funded project will be completed and fully operational by sunset on
-      Thursday, July 2 2015.  If the artist would like to arrive at Firefly Arts Festival before its official start
+    \item[Project Installation (\instdate{})] The funded project will be completed and fully operational by sunset on
+      \instday{}, \instdate{}.  If the artist would like to arrive at Firefly Arts Festival before its official start
       date, the artist must apply for Early Arrival and comply with all Early Arrival policies.
-    \item[FIGMENT Boston 2015 (2015 July 25-26)] The project will be installed at FIGMENT Boston 2015 as per FIGMENT's schedule for
-      participating artists.
   \end{description}
 
 \item Transportation to and from Firefly Arts Festival will be offered by \fac{}.  If the artist accepts this offer of
   transportation, the artist is expected to comply with all Art Truck policies and procedures.
-  
+
 \item The artist agrees to furnish \fac{} with documentation of the project, including one or more of the following: video
   files, audio recordings, and/or photographs of reasonable quality, in an accepted digital format.  'Reasonable quality' is to be determined by
  \fac{} exclusively.  The artist hereby grants \fac{} a non-revokable, non-transferable license to use these materials for promotional and informational
