Move dates to a template. Fix some text

--- a/contract/template_anniversary.tex
+++ b/contract/template_anniversary.tex
@@ -17,11 +17,8 @@
 \newcommand{\amount}{AMOUNT}
 % Import project-specific parameter overrides, if any.
 \IfFileExists{parameters.tex}{\input{parameters.tex}}{}
-% Update these dates for the new year
-\newcommand{\sosdates}{2016 April 30 - 2016 May 1}
-\newcommand{\instday}{Friday}
-\newcommand{\instdate}{2016 July 1}
-\newcommand{\figdates}{2016 July 25 - 26}
+% Import date information
+\input{dates.tex}
 
 \begin{document}
 \chead[Firefly \grant{} \the\year{}]{\project{}}
@@ -54,10 +51,10 @@ All parties agree to the terms presented below.  Violation of any of the followi
 \item The project \project{} will be completed as described in the proposal.  The project will be deemed approved upon
   completion of the artist's and \fac{}'s signatures on this contract.
 
-\item \fac{} will retain 50\% of the grant funding as a performance deposit.  The first payment (10\% of the total alotted
+\item \fac{} will retain 30\% of the grant funding as a performance deposit.  The first payment (70\% of the total alotted
   funding) will be disbursed upon receiving the signed contract; the second payment (20\% of the total funding)
-  will be disbursed upon completion of Firefly Arts Festival \the\year{}; the third payment will be disbursed upon completion of the Figment \the\year{}
-  event and completion of all requirements outlined in this document.
+  will be disbursed upon completion of Firefly Arts Festival \the\year{}; the third payment (10\%) will be disbursed upon
+  completion of the Figment \the\year{} event and completion of all requirements outlined in this document.
 
 \item The artist agrees that this grant of \amount{}\ USD shall represent the total sum they will receive from \fac{} and the artist hereby
   agrees to assume responsibility for any additional costs beyond the the grant amount incurred in the production of
