--- a/contract/template_legacy.tex
+++ b/contract/template_legacy.tex
@@ -17,9 +17,8 @@
 \newcommand{\amount}{AMOUNT}
 % Import project-specific parameter overrides, if any.
 \IfFileExists{parameters.tex}{\input{parameters.tex}}{}
-% Update these dates for the new year
-\newcommand{\instday}{Friday}
-\newcommand{\instdate}{2016 July 1}
+% Import date information
+\input{dates.tex}
 
 \begin{document}
 \chead[Firefly \grant{} \the\year{}]{\project{}}
