--- a/contract/template_anniversary.tex
+++ b/contract/template_anniversary.tex
@@ -51,7 +51,7 @@ All parties agree to the terms presented below.  Violation of any of the followi
 \item The project \project{} will be completed as described in the proposal.  The project will be deemed approved upon
   completion of the artist's and \fac{}'s signatures on this contract.
 
-\item \fac{} will retain 30\% of the grant funding as a performance deposit.  The first payment (70\% of the total alotted
+\item \fac{} will retain 30\% of the grant funding as a performance deposit.  The first payment (70\% of the total allotted
   funding) will be disbursed upon receiving the signed contract; the second payment (20\% of the total funding)
   will be disbursed upon completion of Firefly Arts Festival \the\year{}; the third payment (10\%) will be disbursed upon
   completion of the Figment \the\year{} event and completion of all requirements outlined in this document.
