--- a/contract/template_creativity.tex
+++ b/contract/template_creativity.tex
@@ -51,8 +51,8 @@ All parties agree to the terms presented below.  Violation of any of the followi
 \item The project \project{} will be completed as described in the proposal.  The project will be deemed approved upon
   completion of the artist's and \fac{}'s signatures on this contract.
 
-\item \fac{} will retain 25\% of the grant funding as a performance deposit.  The first payment (75\% of the total alotted
-  funding) will be disbursed upon receiving the signed contract; the second payment (25\% of the total alotted
+\item \fac{} will retain 25\% of the grant funding as a performance deposit.  The first payment (75\% of the total allotted
+  funding) will be disbursed upon receiving the signed contract; the second payment (25\% of the total allotted
   funding) will be disbursed upon completion of all requirements outlined in this document.
 
 \item The artist agrees that this grant of \amount{}\ USD shall represent the total sum they will receive from \fac{} and the artist hereby
